2024-06-08T01:19:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9425061764 # 320
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-08
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 56 100 / 57 101
* notice: next accum: outdated-unq outdated-all / unq all: 57 101 / 58 102
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-04-16] / [2024-06-07]

2024-04-16T16:13:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8708986097 # 188
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-16
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 55 99 / 56 100
* notice: next accum: outdated-unq outdated-all / unq all: 56 100 / 57 101
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-01-30] / [2024-04-16]

2024-01-31T01:06:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7719671166 # 72
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-31
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 54 98 / 55 99
* notice: next accum: outdated-unq outdated-all / unq all: 55 99 / 56 100
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-08-19] / [2024-01-30]

2023-08-19T16:06:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5912336923 # 1101