@@ -3,7 +3,7 @@
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2024-06-07T00:00:00Z",
+      "timestamp": "2024-08-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
